<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".objectDisplay">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home"
            android:layout_alignParentStart="true"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_home_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/product_details"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_add_shopping_cart_24" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp">

            <ImageView
                android:id="@+id/Productimg"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/Productprice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:text="@string/price"
                android:textSize="25dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_discription"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/add_to_cart"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="#F44336"
        android:backgroundTint="#E91E63" />

</LinearLayout>