<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"    tools:context=".Dashboard">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home"
            android:layout_alignParentStart="true"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_home_24" />

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ViewFlipper
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:id="@+id/flipper"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_category"
                android:paddingTop="20dp"
                android:textSize="20dp"
                android:paddingLeft="20dp"
                android:textStyle="bold"/>
            <RelativeLayout
                android:layout_width="310dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="70dp"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="10dp"
                            android:src="@drawable/aa" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/gear2" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/gear1" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/g3" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="310dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="70dp"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="10dp"
                            android:src="@drawable/dd1" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/dea1" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/sqa1" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/clt1" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot_deals"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="20dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_view"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_marginTop="10dp" />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exclusive_clothing_deals"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="20dp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_view1"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_marginTop="10dp" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
